--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "weui components build with san.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,37 @@
   },
   "homepage": "https://github.com/lixijun/san-weui#readme",
   "dependencies": {
+    "babel-runtime": "^6.0.0",
+    "font-awesome": "^4.6.3",
     "san": "^3.0.2",
+    "san-router": "^1.0.0",
     "weui": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-register": "^6.0.0",
+    "connect-history-api-fallback": "^1.1.0",
+    "css-loader": "^0.25.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.12.0",
+    "json-loader": "^0.5.4",
+    "ora": "^0.2.0",
+    "san-loader": "github:ecomfe/san-loader",
+    "shelljs": "^0.6.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-merge": "^0.8.3"
   }
 }
