--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "font-awesome": "^4.6.3",
-    "san": "^3.0.2",
+    "san": "^3.0.3-rc.17",
     "san-router": "^1.0.0",
     "weui": "^1.1.0"
   },
